staging/manifests/web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
        - name: playground-app-web-api
          image: dfal/playground-app-web-api:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
spec:
  type: ClusterIP
  selector:
    app: web-api
  ports:
    - port: 9000
      name: http-port
