staging/manifests/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: playground-app-web-ui
          image: dfal/playground-app-web-ui:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: web-ui-service
spec:
  type: ClusterIP
  selector:
    app: web-ui
  ports:
    - port: 80
      name: http-port
