staging/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-staging
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /staging/api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-api-service
                port:
                  number: 9000
          - path: /staging(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-ui-service
                port:
                  number: 80
